--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
-  
 }
